MonetDB/src/mal/Tests/tst302.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## exception conceptual error, you can not recursively raise an exception
## (you should be able to pass it upwards though)
#
#raise	IllegalAccess:="new exception";
#	c4:= "should not come here";
##exception block;
#catch	IllegalAccess;
#	n0:=0;
#raise	IllegalAccess :="an illegal exception raise";
#end	IllegalAccess;
#
!ERROR: recursive exception 'IllegalAccess' not allowed
function Admin.main():int;	#0:(main:int->0)
	IllegalAccess;	#1:(IllegalAccess:any->13)
	c4 := "should not come here";	#2:(c4:str->14)($15:str->15)
catch	IllegalAccess;	#3:(IllegalAccess:any->13)
	n0 := 0;	#4:(n0:int->16)($17:int->17)
	IllegalAccess;	#5:(IllegalAccess:any->13)
end	IllegalAccess;	#6:(IllegalAccess:any->13)
end function;	#7:
!ERROR: SyntaxError::'Admin.main' contains errors
>